--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "build:ui": "rm -rf build && cd ../my-app/ && npm run build && cp -r build ../server",
-    "deploy": "git push heroku master",
+    "deploy": "git push heroku2 master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
     "logs:prod": "heroku logs --tail"
   },
