--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,5 +27,11 @@ jobs:
         run: npm install
       - name: lint
         run: npm run eslint
+      - name: create env file
+        run: |
+          touch .env
+          echo TEST_MONGODB_URI=${{ secrets.MONGODB_URI }} >> .env
+          echo SECRET=${{ secrets.SECRET }} >> .env
       - name: test
         run: npm test
+
