--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,6 +29,7 @@ jobs:
         run: npm run eslint
       - name: test
         env:
+          TEST_MONGODB_URI: ${{ secrets.MONGODB_URI }}
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
         run: npm test
 
