--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,6 +16,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
+      - name: Set up python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -25,6 +29,10 @@ jobs:
           rollbackonhealthcheckfailed: true
       - name: npm install
         run: npm install
+      - name: pip install
+        run: |
+          python -m pip install --upgrade pip
+          pip install newspaper3k
       - name: lint
         run: npm run eslint
       - name: test
